--- a/front/sock2.html
+++ b/front/sock2.html
@@ -21,15 +21,6 @@
 
       <div class="row">
         <div class="span4">
-          <table class="table table-striped table-bordered table-condensed" id="macedonia">
-            <tr>
-              <th>No.</th><th>id</th><th>value</th>
-            </tr>
-            <tr id="row1">
-              <td> 1 </td><td> id 1 </td><td id="1"> 0 </td>
-            </tr>
-
-
             <ul id="myList">
               <li>PMs will appear here</li>
             </ul>
@@ -73,8 +64,10 @@
      // var $rowid = $('#row' + json.id);
       var list = document.getElementById("myList");
       var newItem = document.createElement("LI");
+      //var newrow = document.createElement("TR");
       var textnode = document.createTextNode(pm);
       var itemnode = document.createElement("IMG");
+      itemnode.setAttribute('src', icon);
       newItem.appendChild(textnode);
       newItem.appendChild(itemnode);
       var listLength = document.getElementsByTagName("li").length;
