--- a/front/sock2.html
+++ b/front/sock2.html
@@ -79,7 +79,7 @@
       if(listLength > 9){
         list.childNodes[10].remove();
       }
-      var audio = new Audio('poi.mp3');
+      var audio = new Audio('poi.wav');
       audio.play();
     };
     ws.onclose = function(ev){
